--- a/Workshops/ISPITNI-21-01-2025/rs1-2025-02_11-novi/frontend/RS1_2024_25_angular_template/src/app/modules/admin/students/students.component.html
+++ b/Workshops/ISPITNI-21-01-2025/rs1-2025-02_11-novi/frontend/RS1_2024_25_angular_template/src/app/modules/admin/students/students.component.html
@@ -47,6 +47,11 @@
         Delete
       </button>
 
+      <button (click)="openMyConfirmDialogRestore(student.id)" color="warn" mat-button>
+        <mat-icon>restore</mat-icon>
+        Restore
+      </button>
+
       <button (click)="openStudentSemesters(student.id)" color="warn" mat-button>
         <mat-icon>description</mat-icon>
         Registry
