--- a/Workshops/ISPITNI-21-01-2025/rs1-2025-02_11-novi/frontend/RS1_2024_25_angular_template/src/app/modules/admin/students/student-semesters/student-semesters.component.html
+++ b/Workshops/ISPITNI-21-01-2025/rs1-2025-02_11-novi/frontend/RS1_2024_25_angular_template/src/app/modules/admin/students/student-semesters/student-semesters.component.html
@@ -1,1 +1,4 @@
 <p>Student ID: {{studentId}}</p>
+<!-- <p>Student Name: {{student?.firstName ?? "Nema imena"}}</p> -->
+<p>Student Name: {{student?.firstName}}</p>
+<p>Student Last Name: {{student?.lastName}}</p>
