--- a/Workshops/ISPITNI-21-01-2025 - COURSE/frontend/RS1_2024_25_angular_template/src/app/modules/admin/students/students.component.html
+++ b/Workshops/ISPITNI-21-01-2025 - COURSE/frontend/RS1_2024_25_angular_template/src/app/modules/admin/students/students.component.html
@@ -42,9 +42,16 @@
         <mat-icon>edit</mat-icon>
         Edit
       </button>
+
+
       <button (click)="openMyConfirmDialog(student.id)" color="warn" mat-button>
         <mat-icon>delete</mat-icon>
         Delete
+      </button>
+
+      <button (click)="openMyConfirmDialogForRestore(student.id)" color="warn" mat-button>
+        <mat-icon>restore</mat-icon>
+        Restore
       </button>
 
       <button (click)="openStudentSemesters(student.id)" color="warn" mat-button>
