--- a/Workshops/ISPITNI-21-01-2025 - COURSE/frontend/RS1_2024_25_angular_template/src/app/modules/admin/students/student-semesters/student-semesters-new/student-semesters-new.component.html
+++ b/Workshops/ISPITNI-21-01-2025 - COURSE/frontend/RS1_2024_25_angular_template/src/app/modules/admin/students/student-semesters/student-semesters-new/student-semesters-new.component.html
@@ -4,26 +4,21 @@
 <mat-card class="student-form-card">
   <form (ngSubmit)="saveSemester()" [formGroup]="semesterForm">
 
+    <!-- Date custom field -->
+    <mat-form-field >
+      <mat-label>Datum</mat-label>
+      <input matInput [matDatepicker]="picker" formControlName="dateOfEnrollemnt">
+      <mat-datepicker-toggle matSuffix [for]="picker" />
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+
     <app-my-input-text myControlName="yearOfStudy" myLabel="Godina studija" myPlaceholder="Enter year of study"></app-my-input-text>
+
     <app-my-dropdown [options]="academicYears" myControlName="academicYearId" myLabel="AK Godina"></app-my-dropdown>
 
     <app-my-input-text myControlName="price" myLabel="Cijena školarine" myPlaceholder="Enter price"></app-my-input-text>
 
     <mat-checkbox formControlName="renewal">Obnova godine</mat-checkbox>
-
-
-    <!--
-
-      <app-my-input-text myControlName="studentNumber" myLabel="Student Number" myPlaceholder="Enter student number"></app-my-input-text>
-
-      <app-my-dropdown [options]="municipalities" myControlName="birthMunicipalityId" myLabel="Birth Municipality"></app-my-dropdown>
-      <app-my-dropdown [options]="municipalities" myControlName="permanentMunicipalityId" myLabel="Permanent Municipality"></app-my-dropdown>
-
-      <app-my-input-text myControlName="contactMobilePhone" myLabel="Mobile Phone" myPlaceholder="Enter mobile phone"></app-my-input-text>
-      <app-my-input-text myControlName="contactPrivateEmail" myLabel="Email" myPlaceholder="Enter email"></app-my-input-text>
-
-  -->
-
 
     <div class="form-buttons">
       <button [disabled]="semesterForm.invalid" color="primary" mat-raised-button type="submit">Save Changes</button>
