--- a/Workshops/ISPITNI-21-01-2025 - COURSE/frontend/RS1_2024_25_angular_template/src/app/modules/admin/students/student-semesters/student-semesters.component.html
+++ b/Workshops/ISPITNI-21-01-2025 - COURSE/frontend/RS1_2024_25_angular_template/src/app/modules/admin/students/student-semesters/student-semesters.component.html
@@ -32,7 +32,7 @@
 
   <ng-container matColumnDef="dateOfEnrollment">
     <mat-header-cell *matHeaderCellDef mat-sort-header>Winter Semester</mat-header-cell>
-    <mat-cell *matCellDef="let semester">{{ semester.dateOfEnrollemnt | date:'yyyy-MM-dd' }}</mat-cell>
+    <mat-cell *matCellDef="let semester">{{ semester.dateOfEnrollment | date:'yyyy-MM-dd' }}</mat-cell>
   </ng-container>
 
 
@@ -43,7 +43,7 @@
 
 
   <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: displayedColumns;" [class.obrisano]="row.isDeleted == true" ></mat-row>
+  <mat-row *matRowDef="let row; columns: displayedColumns;" ></mat-row>
 </table>
 
 
